2000-01-30  Miguel de Icaza  <miguel@gnu.org>

	* e-table-simple.c (e_table_simple_new): Add data field back in.

1999-12-30  Miguel de Icaza  <miguel@gnu.org>

	* e-table-item.c (eti_attach_cell_views): New routine, creates the
	cell views.
	(eti_detach_cell_views): Detaches the cell_views from the
	ETableItem.
	(eti_realize_cell_views, eti_unrealize_cell_views): Simplified to
	just do realize/unrealize notification.
	(eti_add_table_model): Only attach the cells when we have both the
	table model and the header model.

	* e-cell.h (ECellClass): Added two new methods: new_view and
	kill_view which drive the view process (instead of putting that on
	realize/unrealize). 

	* e-cell.c: Adapt the code to use the new scheme for view
	instantiation.

	* e-cell-text.c, e-cell-toggle.c: Adapted to the new class
	changes.
	
1999-12-22  Miguel de Icaza  <miguel@helixcode.com>

	* e-table-item.c (e_table_item_focus): grab focus here with the
	canvas method.

1999-12-20  Miguel de Icaza  <miguel@helixcode.com>

	* e-table-group.c (etg_update): Change the dimensions only if the
	child changes its own.

	* e-table-item.c (eti_table_model_changed): Emit new signal on
	table height change.
	(eti_class_init): Register new "height_change" signal.

1999-12-19  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* Makefile.am (SUBDIRS): created SUBDIRS with meeting-time-sel.

	* meeting-time-sel/Makefile.am: 
	* meeting-time-sel/.cvsignore: 
	* meeting-time-sel/e-meeting-time-sel.h: 
	* meeting-time-sel/e-meeting-time-sel.c: 
	* meeting-time-sel/e-meeting-time-sel-item.h: 
	* meeting-time-sel/e-meeting-time-sel-item.c: 
	* meeting-time-sel/e-meeting-time-sel-list-item.h: 
	* meeting-time-sel/e-meeting-time-sel-list-item.c: 
	* meeting-time-sel/e-meeting-time-sel-mail.xpm: 
	* meeting-time-sel/e-meeting-time-sel-no-mail.xpm: 
	* meeting-time-sel/test-meeting-time-sel.c: new files implementing
	the meeting time selector.

1999-12-12  Miguel de Icaza  <miguel@helixcode.com>
