@@ -1,3 +1,10 @@
+2000-02-07  Miguel de Icaza  <miguel@gnu.org>
+
+	* e-table.c (e_table_setup_table): Setup the scroll region of the
+	table canvas on size allocation.
+	(e_table_canvas_realize): Do not set the scrollregion here.
+	(e_table_canvas_init): Move root initialization here.
+
 2000-01-30  Miguel de Icaza  <miguel@gnu.org>
 
 	* e-table-simple.c (e_table_simple_new): Add data field back in.
